add product-price-section, create footer

--- a/app/index.html
+++ b/app/index.html
@@ -175,10 +175,10 @@
                                         </div>
                                         <!-- /.card-description -->
                                         <div class="card-author-info d-flex">
-                                            <div class="card-author d-flex align-items-center">
+                                            <a href="#" class="card-author d-flex align-items-center">
                                                 <img src="img/user-avatar.png" alt="">
                                                 <span>Radiustheme</span>
-                                            </div>
+                                            </a>
                                             <!-- /.card-author -->
                                             <ul class="product-rating ml-auto">
                                                 <li><i class="fas fa-star"></i></li>
@@ -213,10 +213,10 @@
                                         </div>
                                         <!-- /.card-description -->
                                         <div class="card-author-info d-flex">
-                                            <div class="card-author d-flex align-items-center">
+                                            <a href="#" class="card-author d-flex align-items-center">
                                                 <img src="img/user-avatar.png" alt="">
                                                 <span>PsdBosS</span>
-                                            </div>
+                                            </a>
                                             <!-- /.card-author -->
                                             <ul class="product-rating ml-auto">
                                                 <li><i class="fas fa-star"></i></li>
@@ -251,10 +251,10 @@
                                         </div>
                                         <!-- /.card-description -->
                                         <div class="card-author-info d-flex">
-                                            <div class="card-author d-flex align-items-center">
+                                            <a href="#" class="card-author d-flex align-items-center">
                                                 <img src="img/user-avatar.png" alt="">
                                                 <span>Manilip</span>
-                                            </div>
+                                            </a>
                                             <!-- /.card-author -->
                                             <ul class="product-rating ml-auto">
                                                 <li><i class="fas fa-star"></i></li>
@@ -289,10 +289,10 @@
                                         </div>
                                         <!-- /.card-description -->
                                         <div class="card-author-info d-flex">
-                                            <div class="card-author d-flex align-items-center">
+                                            <a href="#" class="card-author d-flex align-items-center">
                                                 <img src="img/user-avatar.png" alt="">
                                                 <span>Lolypop</span>
-                                            </div>
+                                            </a>
                                             <!-- /.card-author -->
                                             <ul class="product-rating ml-auto">
                                                 <li><i class="fas fa-star"></i></li>
@@ -327,10 +327,10 @@
                                         </div>
                                         <!-- /.card-description -->
                                         <div class="card-author-info d-flex">
-                                            <div class="card-author d-flex align-items-center">
+                                            <a href="#" class="card-author d-flex align-items-center">
                                                 <img src="img/user-avatar.png" alt="">
                                                 <span>Micrsof</span>
-                                            </div>
+                                            </a>
                                             <!-- /.card-author -->
                                             <ul class="product-rating ml-auto">
                                                 <li><i class="fas fa-star"></i></li>
@@ -365,10 +365,10 @@
                                         </div>
                                         <!-- /.card-description -->
                                         <div class="card-author-info d-flex">
-                                            <div class="card-author d-flex align-items-center">
+                                            <a href="#" class="card-author d-flex align-items-center">
                                                 <img src="img/user-avatar.png" alt="">
                                                 <span>Raklouse</span>
-                                            </div>
+                                            </a>
                                             <!-- /.card-author -->
                                             <ul class="product-rating ml-auto">
                                                 <li><i class="fas fa-star"></i></li>
@@ -403,10 +403,10 @@
                                         </div>
                                         <!-- /.card-description -->
                                         <div class="card-author-info d-flex">
-                                            <div class="card-author d-flex align-items-center">
+                                            <a href="#" class="card-author d-flex align-items-center">
                                                 <img src="img/user-avatar.png" alt="">
                                                 <span>Mikc Art</span>
-                                            </div>
+                                            </a>
                                             <!-- /.card-author -->
                                             <ul class="product-rating ml-auto">
                                                 <li><i class="fas fa-star"></i></li>
@@ -441,10 +441,10 @@
                                         </div>
                                         <!-- /.card-description -->
                                         <div class="card-author-info d-flex">
-                                            <div class="card-author d-flex align-items-center">
+                                            <a href="#" class="card-author d-flex align-items-center">
                                                 <img src="img/user-avatar.png" alt="">
                                                 <span>ThemeLol</span>
-                                            </div>
+                                            </a>
                                             <!-- /.card-author -->
                                             <ul class="product-rating ml-auto">
                                                 <li><i class="fas fa-star"></i></li>
@@ -485,10 +485,10 @@
                                         </div>
                                         <!-- /.card-description -->
                                         <div class="card-author-info d-flex">
-                                            <div class="card-author d-flex align-items-center">
+                                            <a href="#" class="card-author d-flex align-items-center">
                                                 <img src="img/user-avatar.png" alt="">
                                                 <span>PsdBosS</span>
-                                            </div>
+                                            </a>
                                             <!-- /.card-author -->
                                             <ul class="product-rating ml-auto">
                                                 <li><i class="fas fa-star"></i></li>
@@ -523,10 +523,10 @@
                                         </div>
                                         <!-- /.card-description -->
                                         <div class="card-author-info d-flex">
-                                            <div class="card-author d-flex align-items-center">
+                                            <a href="#" class="card-author d-flex align-items-center">
                                                 <img src="img/user-avatar.png" alt="">
                                                 <span>Manilip</span>
-                                            </div>
+                                            </a>
                                             <!-- /.card-author -->
                                             <ul class="product-rating ml-auto">
                                                 <li><i class="fas fa-star"></i></li>
@@ -561,10 +561,10 @@
                                         </div>
                                         <!-- /.card-description -->
                                         <div class="card-author-info d-flex">
-                                            <div class="card-author d-flex align-items-center">
+                                            <a href="#" class="card-author d-flex align-items-center">
                                                 <img src="img/user-avatar.png" alt="">
                                                 <span>Raklouse</span>
-                                            </div>
+                                            </a>
                                             <!-- /.card-author -->
                                             <ul class="product-rating ml-auto">
                                                 <li><i class="fas fa-star"></i></li>
@@ -605,10 +605,10 @@
                                         </div>
                                         <!-- /.card-description -->
                                         <div class="card-author-info d-flex">
-                                            <div class="card-author d-flex align-items-center">
+                                            <a href="#" class="card-author d-flex align-items-center">
                                                 <img src="img/user-avatar.png" alt="">
                                                 <span>Micrsof</span>
-                                            </div>
+                                            </a>
                                             <!-- /.card-author -->
                                             <ul class="product-rating ml-auto">
                                                 <li><i class="fas fa-star"></i></li>
@@ -649,10 +649,10 @@
                                         </div>
                                         <!-- /.card-description -->
                                         <div class="card-author-info d-flex">
-                                            <div class="card-author d-flex align-items-center">
+                                            <a href="#" class="card-author d-flex align-items-center">
                                                 <img src="img/user-avatar.png" alt="">
                                                 <span>Mikc Art</span>
-                                            </div>
+                                            </a>
                                             <!-- /.card-author -->
                                             <ul class="product-rating ml-auto">
                                                 <li><i class="fas fa-star"></i></li>
@@ -693,10 +693,10 @@
                                         </div>
                                         <!-- /.card-description -->
                                         <div class="card-author-info d-flex">
-                                            <div class="card-author d-flex align-items-center">
+                                            <a href="#" class="card-author d-flex align-items-center">
                                                 <img src="img/user-avatar.png" alt="">
                                                 <span>Radiustheme</span>
-                                            </div>
+                                            </a>
                                             <!-- /.card-author -->
                                             <ul class="product-rating ml-auto">
                                                 <li><i class="fas fa-star"></i></li>
@@ -737,10 +737,10 @@
                                         </div>
                                         <!-- /.card-description -->
                                         <div class="card-author-info d-flex">
-                                            <div class="card-author d-flex align-items-center">
+                                            <a href="#" class="card-author d-flex align-items-center">
                                                 <img src="img/user-avatar.png" alt="">
                                                 <span>Lolypop</span>
-                                            </div>
+                                            </a>
                                             <!-- /.card-author -->
                                             <ul class="product-rating ml-auto">
                                                 <li><i class="fas fa-star"></i></li>
@@ -775,10 +775,10 @@
                                         </div>
                                         <!-- /.card-description -->
                                         <div class="card-author-info d-flex">
-                                            <div class="card-author d-flex align-items-center">
+                                            <a href="#" class="card-author d-flex align-items-center">
                                                 <img src="img/user-avatar.png" alt="">
                                                 <span>ThemeLol</span>
-                                            </div>
+                                            </a>
                                             <!-- /.card-author -->
                                             <ul class="product-rating ml-auto">
                                                 <li><i class="fas fa-star"></i></li>
@@ -803,6 +803,11 @@
                       <!-- ./tab-content -->
                 </div>
                 <!-- /.newest-products-tabs -->
+                <div class="items-btn-wrap text-center">
+                    <a href="#" class="items-btn bg-white">All New Items</a>
+                    <a href="#" class="items-btn bg-white">Popular Items</a>
+                </div>
+                <!-- /.items-btn-wrap -->
             </div>
             <!-- /.container-fluid -->
         </section>
@@ -818,7 +823,7 @@
             <div class="container">
                 <h2 class="title title-white text-center">Why You Choose Foxtar Market Place?</h2>
                 <div class="row">
-                    <div class="col-md-4">
+                    <div class="col-lg-4">
                         <div class="advantage-item d-flex flex-column align-items-center">
                             <div class="advantage-img">
                                 <img src="img/advantage-img.png" alt="">
@@ -830,8 +835,8 @@
                         </div>
                         <!-- /.advantage-item -->
                     </div>
-                    <!-- /.col-md-4 -->
-                    <div class="col-md-4">
+                    <!-- /.col-lg-4 -->
+                    <div class="col-lg-4">
                         <div class="advantage-item d-flex flex-column align-items-center">
                             <div class="advantage-img">
                                 <img src="img/advantage-img.png" alt="">
@@ -843,8 +848,8 @@
                         </div>
                         <!-- /.advantage-item -->
                     </div>
-                    <!-- /.col-md-4 -->
-                    <div class="col-md-4">
+                    <!-- /.col-lg-4 -->
+                    <div class="col-lg-4">
                         <div class="advantage-item d-flex flex-column align-items-center">
                             <div class="advantage-img">
                                 <img src="img/advantage-img.png" alt="">
@@ -856,16 +861,21 @@
                         </div>
                         <!-- /.advantage-item -->
                     </div>
-                    <!-- /.col-md-4 -->
+                    <!-- /.col-lg-4 -->
                 </div>
                 <!-- /.row -->
             </div>
             <!-- /.container -->
         </section>
         <!-- /.why-choose-foxtar -->
-        <section class="become-a-author">
+        <section class="become-a-author default-section bg-light-grey">
             <div class="container">
-                
+                <img src="img/become-author-img.png" alt="">
+                <div class="become-a-author-content bg-green d-flex">
+                    <span class="become-author-text">Over <span>20,000</span> Author Are Involved Here!</span>
+                    <button class="author-register-btn">Become A Author</button>
+                </div>
+                <!-- /.become-a-author-content -->
             </div>
             <!-- /.container -->
         </section>
