--- a/app/all-items.html
+++ b/app/all-items.html
@@ -201,7 +201,7 @@
                             <!-- /.user-info-wrap -->
                         </div>
                         <!-- /dropdown-list -->
-                        <ul class="dropdown-menu dropdown-menu-list" aria-labelledby="dropdownMenuLink">
+                        <ul class="dropdown-menu dropdown-menu-small" aria-labelledby="dropdownMenuLink">
                             <li>
                                 <a href=""><i class="fas fa-chevron-right"></i>Profile page</a>
                             </li>
@@ -293,27 +293,27 @@
                                 <ul class="default-chevron-list">
                                     <li class="d-flex align-items-center">
                                         <i class="fas fa-chevron-right"></i>
-                                        <span class="list-text">WordPress</span>
+                                        <a href="#" class="list-text">WordPress</a>
                                         <span class="category-item-count ml-auto">(150)</span>
                                     </li>
                                     <li class="d-flex align-items-center">
                                         <i class="fas fa-chevron-right"></i>
-                                        <span class="list-text">Joomla</span>
+                                        <a href="#" class="list-text">Joomla</a>
                                         <span class="category-item-count ml-auto">(100)</span>
                                     </li>
                                     <li class="d-flex align-items-center">
                                         <i class="fas fa-chevron-right"></i>
-                                        <span class="list-text">PSD</span>
+                                        <a href="#" class="list-text">PSD</a>
                                         <span class="category-item-count ml-auto">(50)</span>
                                     </li>
                                     <li class="d-flex align-items-center">
                                         <i class="fas fa-chevron-right"></i>
-                                        <span class="list-text">Plugins</span>
+                                        <a href="#" class="list-text">Plugins</a>
                                         <span class="category-item-count ml-auto">(60)</span>
                                     </li>
                                     <li class="d-flex align-items-center">
                                         <i class="fas fa-chevron-right"></i>
-                                        <span class="list-text">Components</span>
+                                        <a href="#" class="list-text">Components</a>
                                         <span class="category-item-count ml-auto">(40)</span>
                                     </li>
                                 </ul>
@@ -351,10 +351,10 @@
                                     </div>
                                     <!-- /.card-description -->
                                     <div class="card-author-info d-flex">
-                                        <div class="card-author d-flex align-items-center">
+                                        <a href="#" class="card-author d-flex align-items-center">
                                             <img src="img/user-avatar.png" alt="">
                                             <span>PsdBosS</span>
-                                        </div>
+                                        </a>
                                         <!-- /.card-author -->
                                         <ul class="product-rating ml-auto">
                                             <li><i class="fas fa-star"></i></li>
@@ -385,10 +385,10 @@
                                     </div>
                                     <!-- /.card-description -->
                                     <div class="card-author-info d-flex">
-                                        <div class="card-author d-flex align-items-center">
+                                        <a href="#" class="card-author d-flex align-items-center">
                                             <img src="img/user-avatar.png" alt="">
                                             <span>Mikc Art</span>
-                                        </div>
+                                        </a>
                                         <!-- /.card-author -->
                                         <ul class="product-rating ml-auto">
                                             <li><i class="fas fa-star"></i></li>
@@ -419,10 +419,10 @@
                                     </div>
                                     <!-- /.card-description -->
                                     <div class="card-author-info d-flex">
-                                        <div class="card-author d-flex align-items-center">
+                                        <a href="#" class="card-author d-flex align-items-center">
                                             <img src="img/user-avatar.png" alt="">
                                             <span>Greenta9</span>
-                                        </div>
+                                        </a>
                                         <!-- /.card-author -->
                                         <ul class="product-rating ml-auto">
                                             <li><i class="fas fa-star"></i></li>
@@ -477,10 +477,10 @@
                                     </div>
                                     <!-- /.card-description -->
                                     <div class="card-author-info d-flex">
-                                        <div class="card-author d-flex align-items-center">
+                                        <a href="#" class="card-author d-flex align-items-center">
                                             <img src="img/user-avatar.png" alt="">
                                             <span>PsdBosS</span>
-                                        </div>
+                                        </a>
                                         <!-- /.card-author -->
                                         <ul class="product-rating ml-auto">
                                             <li><i class="fas fa-star"></i></li>
@@ -515,10 +515,10 @@
                                     </div>
                                     <!-- /.card-description -->
                                     <div class="card-author-info d-flex">
-                                        <div class="card-author d-flex align-items-center">
+                                        <a href="#" class="card-author d-flex align-items-center">
                                             <img src="img/user-avatar.png" alt="">
                                             <span>Mikestro</span>
-                                        </div>
+                                        </a>
                                         <!-- /.card-author -->
                                         <ul class="product-rating ml-auto">
                                             <li><i class="fas fa-star"></i></li>
@@ -553,10 +553,10 @@
                                     </div>
                                     <!-- /.card-description -->
                                     <div class="card-author-info d-flex">
-                                        <div class="card-author d-flex align-items-center">
+                                        <a href="#" class="card-author d-flex align-items-center">
                                             <img src="img/user-avatar.png" alt="">
                                             <span>PsdBosS</span>
-                                        </div>
+                                        </a>
                                         <!-- /.card-author -->
                                         <ul class="product-rating ml-auto">
                                             <li><i class="fas fa-star"></i></li>
@@ -591,10 +591,10 @@
                                     </div>
                                     <!-- /.card-description -->
                                     <div class="card-author-info d-flex">
-                                        <div class="card-author d-flex align-items-center">
+                                        <a href="#" class="card-author d-flex align-items-center">
                                             <img src="img/user-avatar.png" alt="">
                                             <span>Gimsz</span>
-                                        </div>
+                                        </a>
                                         <!-- /.card-author -->
                                         <ul class="product-rating ml-auto">
                                             <li><i class="fas fa-star"></i></li>
@@ -629,10 +629,10 @@
                                     </div>
                                     <!-- /.card-description -->
                                     <div class="card-author-info d-flex">
-                                        <div class="card-author d-flex align-items-center">
+                                        <a href="#" class="card-author d-flex align-items-center">
                                             <img src="img/user-avatar.png" alt="">
                                             <span>Greenta</span>
-                                        </div>
+                                        </a>
                                         <!-- /.card-author -->
                                         <ul class="product-rating ml-auto">
                                             <li><i class="fas fa-star"></i></li>
@@ -667,10 +667,10 @@
                                     </div>
                                     <!-- /.card-description -->
                                     <div class="card-author-info d-flex">
-                                        <div class="card-author d-flex align-items-center">
+                                        <a href="#" class="card-author d-flex align-items-center">
                                             <img src="img/user-avatar.png" alt="">
                                             <span>PsdBosS</span>
-                                        </div>
+                                        </a>
                                         <!-- /.card-author -->
                                         <ul class="product-rating ml-auto">
                                             <li><i class="fas fa-star"></i></li>
@@ -705,10 +705,10 @@
                                     </div>
                                     <!-- /.card-description -->
                                     <div class="card-author-info d-flex">
-                                        <div class="card-author d-flex align-items-center">
+                                        <a href="#" class="card-author d-flex align-items-center">
                                             <img src="img/user-avatar.png" alt="">
                                             <span>PsdBosS</span>
-                                        </div>
+                                        </a>
                                         <!-- /.card-author -->
                                         <ul class="product-rating ml-auto">
                                             <li><i class="fas fa-star"></i></li>
@@ -743,10 +743,10 @@
                                     </div>
                                     <!-- /.card-description -->
                                     <div class="card-author-info d-flex">
-                                        <div class="card-author d-flex align-items-center">
+                                        <a href="#" class="card-author d-flex align-items-center">
                                             <img src="img/user-avatar.png" alt="">
                                             <span>PsdBosS</span>
-                                        </div>
+                                        </a>
                                         <!-- /.card-author -->
                                         <ul class="product-rating ml-auto">
                                             <li><i class="fas fa-star"></i></li>
@@ -781,10 +781,10 @@
                                     </div>
                                     <!-- /.card-description -->
                                     <div class="card-author-info d-flex">
-                                        <div class="card-author d-flex align-items-center">
+                                        <a href="#" class="card-author d-flex align-items-center">
                                             <img src="img/user-avatar.png" alt="">
                                             <span>PsdBosS</span>
-                                        </div>
+                                        </a>
                                         <!-- /.card-author -->
                                         <ul class="product-rating ml-auto">
                                             <li><i class="fas fa-star"></i></li>
@@ -819,10 +819,10 @@
                                     </div>
                                     <!-- /.card-description -->
                                     <div class="card-author-info d-flex">
-                                        <div class="card-author d-flex align-items-center">
+                                        <a href="#" class="card-author d-flex align-items-center">
                                             <img src="img/user-avatar.png" alt="">
                                             <span>PsdBosS</span>
-                                        </div>
+                                        </a>
                                         <!-- /.card-author -->
                                         <ul class="product-rating ml-auto">
                                             <li><i class="fas fa-star"></i></li>
@@ -857,10 +857,10 @@
                                     </div>
                                     <!-- /.card-description -->
                                     <div class="card-author-info d-flex">
-                                        <div class="card-author d-flex align-items-center">
+                                        <a href="#" class="card-author d-flex align-items-center">
                                             <img src="img/user-avatar.png" alt="">
                                             <span>PsdBosS</span>
-                                        </div>
+                                        </a>
                                         <!-- /.card-author -->
                                         <ul class="product-rating ml-auto">
                                             <li><i class="fas fa-star"></i></li>
@@ -895,10 +895,10 @@
                                     </div>
                                     <!-- /.card-description -->
                                     <div class="card-author-info d-flex">
-                                        <div class="card-author d-flex align-items-center">
+                                        <a href="#" class="card-author d-flex align-items-center">
                                             <img src="img/user-avatar.png" alt="">
                                             <span>PsdBosS</span>
-                                        </div>
+                                        </a>
                                         <!-- /.card-author -->
                                         <ul class="product-rating ml-auto">
                                             <li><i class="fas fa-star"></i></li>
