--- a/app/product-details.html
+++ b/app/product-details.html
@@ -201,7 +201,7 @@
                             <!-- /.user-info-wrap -->
                         </div>
                         <!-- /dropdown-list -->
-                        <ul class="dropdown-menu dropdown-menu-list" aria-labelledby="dropdownMenuLink">
+                        <ul class="dropdown-menu dropdown-menu-small" aria-labelledby="dropdownMenuLink">
                             <li>
                                 <a href=""><i class="fas fa-chevron-right"></i>Profile page</a>
                             </li>
@@ -604,7 +604,7 @@
                                     <!-- /.card -->
                                 </div>
                                 <!-- /.col-lg-4 -->
-                                                                <div class="col-lg-4">
+                                <div class="col-lg-4">
                                     <div class="card bg-white d-flex">
                                         <div class="card-img">
                                             <a href="#">
@@ -635,6 +635,20 @@
                         <aside id="aside">
                             <div class="aside-section product-price-section bg-white border-grey">
                                 <h3 class="aside-title">Product Price</h3>
+                                <div class="price-wrap d-flex align-items-center">
+                                    <span>$59.00</span>
+                                    <div class="price-dropdown ml-auto">
+                                        <a class="price-btn" href="#" id="dropdownMenuLink" data-toggle="dropdown">Regular <i class="fas fa-sort-down"></i></a>
+                                        <div class="dropdown-menu dropdown-menu-small dropdown-menu-right" aria-labelledby="dropdownMenuLink">
+                                            <a class="dropdown-price-item" href="#">WordPress</a>
+                                            <a class="dropdown-price-item" href="#">PSD Template</a>
+                                            <a class="dropdown-price-item" href="#">Joomla</a>
+                                        </div>
+                                        <!-- /.dropdown-menu -->
+                                    </div>
+                                    <!-- /.price-dropdown -->
+                                </div>
+                                <!-- /.price-wrap -->
                                 <a href="#" class="btn large-btn bg-green"><i class="fas fa-shopping-cart"></i>Add to Card</a>
                                 <a href="#" class="btn large-btn bg-steel-blue"><i class="far fa-heart"></i>Add to Favourites</a>
                                 <a href="#" class="btn large-btn bg-marengo">Buy Now</a>
@@ -644,8 +658,10 @@
                                 <h3 class="aside-title">Product Author</h3>
                             </div>
                             <!-- /.aside-section -->
-                            <div class="aside-section bg-white border-grey">
-
+                            <div class="aside-section sales-section bg-white border-grey">
+                                <i class="fas fa-shopping-cart"></i>
+                                <span class="sales-count">05</span>
+                                <span class="sales-name">Sales</span>
                             </div>
                             <!-- /.aside-section -->
                             <div class="aside-section bg-white border-grey">
@@ -673,6 +689,49 @@
         <!-- /.content-wrapper -->
     </main>
     <!-- /#main -->
+    <footer id="footer" class="bg-dark-blue">
+        <div class="footer-top">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-3">
+                        <div class="footer-item">
+                            <div class="footer-title">
+                                <span>About Company</span>
+                            </div>
+                            <!-- /.footer-title -->
+                            <p class="default-text">Praesent vel rutrum purus. Nam vel dui eu risus duis dignissim digniSuspen disse.Fusce sit amet urna iat.Praesent vel rutrum purus.</p>
+                            <div class="contact-wrap">
+                                <div class="contact-item d-flex">
+                                    <i class="fas fa-map-marker-alt"></i>
+                                    <span>PO Box 16122 Collins Street West Victoria 8007 Australia</span>
+                                </div>
+                                <!-- /.contact-item -->
+                                <div class="contact-item d-flex">
+                                    <i class="fas fa-phone"></i>
+                                    <span>+61 3 8376 6284</span>
+                                </div>
+                                <!-- /.contact-item -->
+                            </div>
+                            <!-- /.contact-wrap -->
+                        </div>
+                        <!-- /.footer-item -->
+                    </div>
+                    <!-- /.col-md-3 -->
+                </div>
+                <!-- /.row -->
+            </div>
+            <!-- /.container -->
+        </div>
+        <!-- /.footer-top -->
+        <div class="footer-bottom">
+            <div class="copy text-center">
+                <span>&copy; 2017 Foxtar market place. Trademarks and brands are the property of their respective owners.</span>
+            </div>
+            <!-- /.copy -->
+        </div>
+        <!-- /.footer-bottom -->
+    </footer>
+    <!-- /#footer -->
 
     <!-- jQuery -->
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" 
