finished product details

--- a/app/product-details.html
+++ b/app/product-details.html
@@ -15,7 +15,9 @@
     <!-- Ion range styles -->
     <link rel="stylesheet" href="css/ion.rangeSlider.css">
     <link rel="stylesheet" href="css/ion.rangeSlider.skinNice.css">
-    <!-- Custom style -->
+    <!-- Sprite styles -->
+    <link rel="stylesheet" href="css/sprite.css">
+    <!-- Custom styles -->
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -656,6 +658,23 @@
                             <!-- /.aside-section -->
                             <div class="aside-section bg-white border-grey">
                                 <h3 class="aside-title">Product Author</h3>
+                                <div class="product-author-info d-flex">
+                                    <img src="img/product-author-img.jpg" alt="">
+                                    <div class="product-author">
+                                        <span>PsdBoss</span>
+                                        <a href="#" class="profile-btn">View Profile</a>
+                                    </div>
+                                    <!-- /.product-author -->
+                                </div>
+                                <!-- /.product-author-info -->
+                                <div class="product-author-sprite-wrap d-flex justify-content-between">
+                                    <i class="icon icon-emoji"></i>
+                                    <i class="icon icon-leaf"></i>
+                                    <i class="icon icon-bold"></i>
+                                    <i class="icon icon-foursquare"></i>
+                                    <i class="icon icon-yen"></i>
+                                </div>
+                                <!-- /.product-author-sprite-wrap -->
                             </div>
                             <!-- /.aside-section -->
                             <div class="aside-section sales-section bg-white border-grey">
@@ -713,6 +732,104 @@
                                 <!-- /.contact-item -->
                             </div>
                             <!-- /.contact-wrap -->
+                        </div>
+                        <!-- /.footer-item -->
+                    </div>
+                    <!-- /.col-md-3 -->
+                    <div class="col-md-3">
+                        <div class="footer-item footer-list">
+                            <div class="footer-title">
+                                <span>Join Our Community</span>
+                            </div>
+                            <!-- /.footer-title -->
+                            <ul class="default-chevron-list">
+                                <li>
+                                    <i class="fas fa-chevron-right"></i>
+                                    <a href="#">Home</a>
+                                </li>
+                                <li>
+                                    <i class="fas fa-chevron-right"></i>
+                                    <a href="#">Forums</a>
+                                </li>
+                                <li>
+                                    <i class="fas fa-chevron-right"></i>
+                                    <a href="#">Become an Author</a>
+                                </li>
+                                <li>
+                                    <i class="fas fa-chevron-right"></i>
+                                    <a href="#">Community Meetups</a>
+                                </li>
+                                <li>
+                                    <i class="fas fa-chevron-right"></i>
+                                    <a href="#">Become an Affiliate</a>
+                                </li>
+                            </ul>
+                            <!-- /.default-chevron-list -->
+                        </div>
+                        <!-- /.footer-item -->
+                    </div>
+                    <!-- /.col-md-3 -->
+                    <div class="col-md-3">
+                        <div class="footer-item footer-list">
+                            <div class="footer-title">
+                                <span>Need Help?</span>
+                            </div>
+                            <!-- /.footer-title -->
+                            <ul class="default-chevron-list">
+                                <li>
+                                    <i class="fas fa-chevron-right"></i>
+                                    <a href="#">Help Center</a>
+                                </li>
+                                <li>
+                                    <i class="fas fa-chevron-right"></i>
+                                    <a href="#">Foxtar Market Terms</a>
+                                </li>
+                                <li>
+                                    <i class="fas fa-chevron-right"></i>
+                                    <a href="#">Author Terms</a>
+                                </li>
+                                <li>
+                                    <i class="fas fa-chevron-right"></i>
+                                    <a href="#">Foxtar Licenses</a>
+                                </li>
+                                <li>
+                                    <i class="fas fa-chevron-right"></i>
+                                    <a href="#">Contact Us</a>
+                                </li>
+                            </ul>
+                            <!-- /.default-chevron-list -->
+                        </div>
+                        <!-- /.footer-item -->
+                    </div>
+                    <!-- /.col-md-3 -->
+                    <div class="col-md-3">
+                        <div class="footer-item">
+                            <div class="footer-title">
+                                <span>Follow Us On</span>
+                            </div>
+                            <!-- /.footer-title -->
+                            <nav class="footer-sprite-wrap">
+                                <a href="#" class="icon icon-facebook"></a>
+                                <a href="#" class="icon icon-twitter"></a>
+                                <a href="#" class="icon icon-youtube"></a>
+                                <a href="#" class="icon icon-pinterest"></a>
+                                <a href="#" class="icon icon-linkedin"></a>
+                            </nav>
+                            <!-- /.footer-sprite-wrap -->
+                            <div class="subscribe-form-wrapper">
+                                <div class="form-title">
+                                    <span>Newsletter Sign Up!</span>
+                                </div>
+                                <!-- /.subscribe-form-title -->
+                                <div class="subscribe-form">
+                                    <form class="d-flex">
+                                        <input type="email" name="email" id="email" placeholder="E-mail Address">
+                                        <button type="submit"><i class="fas fa-location-arrow"></i></button>
+                                    </form>
+                                </div>
+                                <!-- /.subscribe-form -->
+                            </div>
+                            <!-- /.subscribe-form-wrapper -->
                         </div>
                         <!-- /.footer-item -->
                     </div>
