--- a/app/all-items.html
+++ b/app/all-items.html
@@ -293,27 +293,27 @@
                                 <ul class="default-chevron-list">
                                     <li class="d-flex align-items-center">
                                         <i class="fas fa-chevron-right"></i>
-                                        <a href="#" class="list-text">WordPress</a>
+                                        <a href="#">WordPress</a>
                                         <span class="category-item-count ml-auto">(150)</span>
                                     </li>
                                     <li class="d-flex align-items-center">
                                         <i class="fas fa-chevron-right"></i>
-                                        <a href="#" class="list-text">Joomla</a>
+                                        <a href="#">Joomla</a>
                                         <span class="category-item-count ml-auto">(100)</span>
                                     </li>
                                     <li class="d-flex align-items-center">
                                         <i class="fas fa-chevron-right"></i>
-                                        <a href="#" class="list-text">PSD</a>
+                                        <a href="#">PSD</a>
                                         <span class="category-item-count ml-auto">(50)</span>
                                     </li>
                                     <li class="d-flex align-items-center">
                                         <i class="fas fa-chevron-right"></i>
-                                        <a href="#" class="list-text">Plugins</a>
+                                        <a href="#">Plugins</a>
                                         <span class="category-item-count ml-auto">(60)</span>
                                     </li>
                                     <li class="d-flex align-items-center">
                                         <i class="fas fa-chevron-right"></i>
-                                        <a href="#" class="list-text">Components</a>
+                                        <a href="#">Components</a>
                                         <span class="category-item-count ml-auto">(40)</span>
                                     </li>
                                 </ul>
