create trending-product-carousel, add label hot-product

--- a/app/product-details.html
+++ b/app/product-details.html
@@ -667,13 +667,13 @@
                                     <!-- /.product-author -->
                                 </div>
                                 <!-- /.product-author-info -->
-                                <div class="product-author-sprite-wrap d-flex justify-content-between">
-                                    <i class="icon icon-emoji"></i>
-                                    <i class="icon icon-leaf"></i>
-                                    <i class="icon icon-bold"></i>
-                                    <i class="icon icon-foursquare"></i>
-                                    <i class="icon icon-yen"></i>
-                                </div>
+                                <ul class="product-author-sprite-wrap d-flex justify-content-between">
+                                    <li><i class="icon icon-emoji"></i></li> 
+                                    <li><i class="icon icon-leaf"></i></li>
+                                    <li><i class="icon icon-bolt"></i></li>
+                                    <li><i class="icon icon-foursquare"></i></li>
+                                    <li><i class="icon icon-yen"></i></li>
+                                </ul>
                                 <!-- /.product-author-sprite-wrap -->
                             </div>
                             <!-- /.aside-section -->
