--- a/app/all-items.html
+++ b/app/all-items.html
@@ -15,6 +15,8 @@
     <!-- Ion range styles -->
     <link rel="stylesheet" href="css/ion.rangeSlider.css">
     <link rel="stylesheet" href="css/ion.rangeSlider.skinNice.css">
+    <!-- Sprite styles -->
+    <link rel="stylesheet" href="css/sprite.css">
     <!-- Custom style -->
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -945,6 +947,147 @@
         <!-- /.content-wrapper -->
     </main>
     <!-- /#main -->
+    <footer id="footer" class="bg-dark-blue">
+        <div class="footer-top">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-3">
+                        <div class="footer-item">
+                            <div class="footer-title">
+                                <span>About Company</span>
+                            </div>
+                            <!-- /.footer-title -->
+                            <p class="default-text">Praesent vel rutrum purus. Nam vel dui eu risus duis dignissim digniSuspen disse.Fusce sit amet urna iat.Praesent vel rutrum purus.</p>
+                            <div class="contact-wrap">
+                                <div class="contact-item d-flex">
+                                    <i class="fas fa-map-marker-alt"></i>
+                                    <span>PO Box 16122 Collins Street West Victoria 8007 Australia</span>
+                                </div>
+                                <!-- /.contact-item -->
+                                <div class="contact-item d-flex">
+                                    <i class="fas fa-phone"></i>
+                                    <span>+61 3 8376 6284</span>
+                                </div>
+                                <!-- /.contact-item -->
+                            </div>
+                            <!-- /.contact-wrap -->
+                        </div>
+                        <!-- /.footer-item -->
+                    </div>
+                    <!-- /.col-md-3 -->
+                    <div class="col-md-3">
+                        <div class="footer-item footer-list">
+                            <div class="footer-title">
+                                <span>Join Our Community</span>
+                            </div>
+                            <!-- /.footer-title -->
+                            <ul class="default-chevron-list">
+                                <li>
+                                    <i class="fas fa-chevron-right"></i>
+                                    <a href="#">Home</a>
+                                </li>
+                                <li>
+                                    <i class="fas fa-chevron-right"></i>
+                                    <a href="#">Forums</a>
+                                </li>
+                                <li>
+                                    <i class="fas fa-chevron-right"></i>
+                                    <a href="#">Become an Author</a>
+                                </li>
+                                <li>
+                                    <i class="fas fa-chevron-right"></i>
+                                    <a href="#">Community Meetups</a>
+                                </li>
+                                <li>
+                                    <i class="fas fa-chevron-right"></i>
+                                    <a href="#">Become an Affiliate</a>
+                                </li>
+                            </ul>
+                            <!-- /.default-chevron-list -->
+                        </div>
+                        <!-- /.footer-item -->
+                    </div>
+                    <!-- /.col-md-3 -->
+                    <div class="col-md-3">
+                        <div class="footer-item footer-list">
+                            <div class="footer-title">
+                                <span>Need Help?</span>
+                            </div>
+                            <!-- /.footer-title -->
+                            <ul class="default-chevron-list">
+                                <li>
+                                    <i class="fas fa-chevron-right"></i>
+                                    <a href="#">Help Center</a>
+                                </li>
+                                <li>
+                                    <i class="fas fa-chevron-right"></i>
+                                    <a href="#">Foxtar Market Terms</a>
+                                </li>
+                                <li>
+                                    <i class="fas fa-chevron-right"></i>
+                                    <a href="#">Author Terms</a>
+                                </li>
+                                <li>
+                                    <i class="fas fa-chevron-right"></i>
+                                    <a href="#">Foxtar Licenses</a>
+                                </li>
+                                <li>
+                                    <i class="fas fa-chevron-right"></i>
+                                    <a href="#">Contact Us</a>
+                                </li>
+                            </ul>
+                            <!-- /.default-chevron-list -->
+                        </div>
+                        <!-- /.footer-item -->
+                    </div>
+                    <!-- /.col-md-3 -->
+                    <div class="col-md-3">
+                        <div class="footer-item">
+                            <div class="footer-title">
+                                <span>Follow Us On</span>
+                            </div>
+                            <!-- /.footer-title -->
+                            <nav class="footer-sprite-wrap">
+                                <a href="#" class="icon icon-facebook"></a>
+                                <a href="#" class="icon icon-twitter"></a>
+                                <a href="#" class="icon icon-youtube"></a>
+                                <a href="#" class="icon icon-pinterest"></a>
+                                <a href="#" class="icon icon-linkedin"></a>
+                            </nav>
+                            <!-- /.footer-sprite-wrap -->
+                            <div class="subscribe-form-wrapper">
+                                <div class="form-title">
+                                    <span>Newsletter Sign Up!</span>
+                                </div>
+                                <!-- /.subscribe-form-title -->
+                                <div class="subscribe-form">
+                                    <form class="d-flex">
+                                        <input type="email" name="email" id="email" placeholder="E-mail Address">
+                                        <button type="submit"><i class="fas fa-location-arrow"></i></button>
+                                    </form>
+                                </div>
+                                <!-- /.subscribe-form -->
+                            </div>
+                            <!-- /.subscribe-form-wrapper -->
+                        </div>
+                        <!-- /.footer-item -->
+                    </div>
+                    <!-- /.col-md-3 -->
+                </div>
+                <!-- /.row -->
+            </div>
+            <!-- /.container -->
+        </div>
+        <!-- /.footer-top -->
+        <div class="footer-bottom">
+            <div class="copy text-center">
+                <span>&copy; 2017 Foxtar market place. Trademarks and brands are the property of their respective owners.</span>
+            </div>
+            <!-- /.copy -->
+        </div>
+        <!-- /.footer-bottom -->
+    </footer>
+    <!-- /#footer -->
 
     <!-- jQuery -->
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" 
