--- a/app/all-items.html
+++ b/app/all-items.html
@@ -23,7 +23,7 @@
 <body>
     <header id="header">
         <div class="top-header bg-white">
-            <div class="container d-flex align-items-center">
+            <div class="container d-flex align-items-center flex-wrap">
                 <div class="logo">
                     <a href="index.html">
                         <img src="img/logo.png" alt="">
@@ -34,7 +34,7 @@
                     <span><span>Need help?</span> Talk to an expert: <a href="tel:+61383766284">+61 3 8376 6284</a></span>
                 </div>
                 <!-- /.need-help -->
-                <div class="user-controls d-flex align-items-center">
+                <div class="user-controls d-flex align-items-center justify-content-around justify-content-start">
                     <div class="dropdown-item">
                         <div class="dropdown-control d-flex" id="dropdownMenuLink" data-toggle="dropdown">
                             <i class="far fa-bell mx-auto my-auto"></i>
@@ -287,8 +287,13 @@
                     <li class="active">Product Page</li>
                 </ul>
                 <!-- /.breadcrumb -->
+
+                <div class="overlay"></div>
+                <!-- /.overlay -->
+
                 <div class="row">
-                    <div class="col-md-3">
+                    <div class="col-12 col-lg-3 mobile-aside left">
+                        <button class="close-mobile-aside"><i class="fas fa-times"></i></button>
                         <aside id="aside">
                             <div class="aside-section bg-white border-grey">
                                 <h3 class="aside-title">Categories</h3>
@@ -445,8 +450,12 @@
                         <!-- /#aside -->
                     </div>
                     <!-- /.col-md-3 -->
-                    <div class="col-md-9">
+                    <div class="col-lg-9 col-12">
                         <div class="view-controls bg-white border-grey d-flex">
+                            <div class="mobile-aside-toggle">
+                                <i class="fab fa-elementor"></i>
+                            </div>
+                            <!-- /.mobile-aside-toggle -->
                             <div class="sort-wrap d-flex align-items-center">
                                 <i class="fas fa-sort-amount-down"></i>
                                 <span class="sort-name align-self-start">Sort by: New Items</span>
@@ -461,7 +470,7 @@
                         </div>
                         <!-- /.view-controls -->
                         <div class="row">
-                            <div class="col-lg-4">
+                            <div class="col-xl-4 col-md-6">
                                 <div class="card bg-white">
                                     <div class="card-img">
                                         <a href="#">
@@ -498,8 +507,8 @@
                                 </div>
                                 <!-- /.card -->
                             </div>
-                            <!-- /.col-lg-4 -->
-                            <div class="col-lg-4">
+                            <!-- /.col-xl-4 -->
+                            <div class="col-xl-4 col-md-6">
                                 <div class="card bg-white">
                                     <div class="card-img">
                                         <a href="#">
@@ -536,8 +545,8 @@
                                 </div>
                                 <!-- /.card -->
                             </div>
-                            <!-- /.col-lg-4 -->
-                            <div class="col-lg-4">
+                            <!-- /.col-xl-4 -->
+                            <div class="col-xl-4 col-md-6">
                                 <div class="card bg-white">
                                     <div class="card-img">
                                         <a href="#">
@@ -574,8 +583,8 @@
                                 </div>
                                 <!-- /.card -->
                             </div>
-                            <!-- /.col-lg-4 -->
-                            <div class="col-lg-4">
+                            <!-- /.col-xl-4 -->
+                            <div class="col-xl-4 col-md-6">
                                 <div class="card bg-white">
                                     <div class="card-img">
                                         <a href="#">
@@ -612,8 +621,8 @@
                                 </div>
                                 <!-- /.card -->
                             </div>
-                            <!-- /.col-lg-4 -->
-                            <div class="col-lg-4">
+                            <!-- /.col-xl-4 -->
+                            <div class="col-xl-4 col-md-6">
                                 <div class="card bg-white">
                                     <div class="card-img">
                                         <a href="#">
@@ -650,8 +659,8 @@
                                 </div>
                                 <!-- /.card -->
                             </div>
-                            <!-- /.col-lg-4 -->
-                            <div class="col-lg-4">
+                            <!-- /.col-xl-4 -->
+                            <div class="col-xl-4 col-md-6">
                                 <div class="card bg-white">
                                     <div class="card-img">
                                         <a href="#">
@@ -688,8 +697,8 @@
                                 </div>
                                 <!-- /.card -->
                             </div>
-                            <!-- /.col-lg-4 -->
-                            <div class="col-lg-4">
+                            <!-- /.col-xl-4 -->
+                            <div class="col-xl-4 col-md-6">
                                 <div class="card bg-white">
                                     <div class="card-img">
                                         <a href="#">
@@ -726,8 +735,8 @@
                                 </div>
                                 <!-- /.card -->
                             </div>
-                            <!-- /.col-lg-4 -->
-                            <div class="col-lg-4">
+                            <!-- /.col-xl-4 -->
+                            <div class="col-xl-4 col-md-6">
                                 <div class="card bg-white">
                                     <div class="card-img">
                                         <a href="#">
@@ -764,8 +773,8 @@
                                 </div>
                                 <!-- /.card -->
                             </div>
-                            <!-- /.col-lg-4 -->
-                            <div class="col-lg-4">
+                            <!-- /.col-xl-4 -->
+                            <div class="col-xl-4 col-md-6">
                                 <div class="card bg-white">
                                     <div class="card-img">
                                         <a href="#">
@@ -802,8 +811,8 @@
                                 </div>
                                 <!-- /.card -->
                             </div>
-                            <!-- /.col-lg-4 -->
-                            <div class="col-lg-4">
+                            <!-- /.col-xl-4 -->
+                            <div class="col-xl-4 col-md-6">
                                 <div class="card bg-white">
                                     <div class="card-img">
                                         <a href="#">
@@ -840,8 +849,8 @@
                                 </div>
                                 <!-- /.card -->
                             </div>
-                            <!-- /.col-lg-4 -->
-                            <div class="col-lg-4">
+                            <!-- /.col-xl-4 -->
+                            <div class="col-xl-4 col-md-6">
                                 <div class="card bg-white">
                                     <div class="card-img">
                                         <a href="#">
@@ -878,8 +887,8 @@
                                 </div>
                                 <!-- /.card -->
                             </div>
-                            <!-- /.col-lg-4 -->
-                            <div class="col-lg-4">
+                            <!-- /.col-xl-4 -->
+                            <div class="col-xl-4 col-md-6">
                                 <div class="card bg-white">
                                     <div class="card-img">
                                         <a href="#">
@@ -916,7 +925,7 @@
                                 </div>
                                 <!-- /.card -->
                             </div>
-                            <!-- /.col-lg-4 -->
+                            <!-- /.col-xl-4 -->
                         </div>
                         <!-- /.row -->
                         <nav class="pagination-wrap">
@@ -938,7 +947,7 @@
                         </nav>
                         <!-- /.pagination-wrap -->
                     </div>
-                    <!-- /.col-md-9 -->
+                    <!-- /.col-lg-9 -->
                 </div>
                 <!-- /.row -->
             </div>
@@ -1097,6 +1106,8 @@
     <script src="js/bootstrap.min.js"></script>
     <!-- Ion range slider -->
     <script src="js/ion.rangeSlider.min.js"></script>
+    <!-- Aside js -->
+    <script src="js/aside.js"></script>
     <!-- Init plugins -->
     <script src="js/init.js"></script>
 </body>
