--- a/app/index.html
+++ b/app/index.html
@@ -17,6 +17,8 @@
     <link rel="stylesheet" href="css/ion.rangeSlider.skinNice.css">
     <!-- Slick styles -->
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.css"/>
+    <!-- Sprite styles -->
+    <link rel="stylesheet" href="css/sprite.css">
     <!-- Custom style -->
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -1440,7 +1442,7 @@
                 <img src="img/become-author-img.png" alt="">
                 <div class="become-a-author-content bg-green d-flex">
                     <span class="become-author-text">Over <span>20,000</span> Author Are Involved Here!</span>
-                    <button class="author-register-btn">Become A Author</button>
+                    <button class="author-register-btn bg-white">Become A Author</button>
                 </div>
                 <!-- /.become-a-author-content -->
             </div>
